# TensorNikq

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
src/: __init__.py  engine.py  tensor.py
src/data_ops/: __init__.py
src/data_ops/broadcast_ops/: __init__.py
src/data_ops/math_ops/: binary_ops.py  generic_op.py
src/data_ops/tensorial_ops/: binary_ops.py  unary_ops.py
src/function_ops/: __init__.py  unary.py
src/function_ops/tensorial/: binary_ops.py
src/tensorNikq/: __init__.py  function.py  tensor.py  utils.py
src/tensorNikq/data_ops/: __init__.py
src/tensorNikq/data_ops/arith_logic_ops/: __init__.py  binary_ops.py  logical_ops.py  rel_ops.py
src/tensorNikq/data_ops/broadcast_ops/: broadcast.py  reduce.py
src/tensorNikq/data_ops/math_ops/: __init__.py  unary_ops.py
src/tensorNikq/data_ops/model_ops/: __init__.py  basics.py
src/tensorNikq/data_ops/tensorial_ops/: __init__.py  binary_ops.py
src/tensorNikq/function_ops/: __init__.py  binary.py  model.py  relation.py  unary.py
src/tensorNikq/function_ops/tensorial/: __init__.py  unary_ops.py
src/tensorNikq/functional/: __init__.py  utils.py
src/tensorNikq/neural_networks/: __init__.py  dropout.py  linear.py  module.py
tests/: test_autograd.py  test_binary_ops_tensor_data.py  test_data_ops.py  test_tensor_basic.py  test_tensor_ops.py  test_tensor_ops_broadcast.py
